@@ -8,6 +8,8 @@ import util.DataUtil;
 import java.util.List;
 import java.util.Map;
 
+import static java.util.stream.Collectors.toUnmodifiableList;
+
 /*
     Goal: use map() to project an array of videos into an array of {id, title}-pairs
     DataSource: DataUtil.getMovies()
@@ -17,6 +19,8 @@ public class Kata1 {
     public static List<Map> execute() {
         List<Movie> movies = DataUtil.getMovies();
 
-        return ImmutableList.of(ImmutableMap.of("id", 5, "title", "Bad Boys"));
+        return  movies.stream()
+                .map((movie -> Map.of("id", movie.getId(), "title", movie.getTitle())))
+                .collect(toUnmodifiableList());
     }
 }
